--- a/day2/car_parking_system/01bootstrap/client/car_create.html
+++ b/day2/car_parking_system/01bootstrap/client/car_create.html
@@ -1,16 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Parking System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="car_list.html">Car Parking System</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -25,23 +30,27 @@
             </div>
         </div>
     </nav>
-   
-    <h3> <a href="car_list.html" class="btn btn-light">Go Back</a>Add Car</h3>
+
+    <h3> Add Car Page</h3>
+    <h2> <a href="car_list.html" class="btn btn-success">Go Back</a> </h2>
     <div class="container">
         <div class="form-group mb-3">
             <label for="number" class="form-label">Car Number:</label>
-            <input type="text" class="form-control" id="number" placeholder="please enter car number"/>
+            <input type="text" class="form-control" id="number" placeholder="please enter car number" />
         </div>
         <div class="form-group mb-3">
             <label for="model" class="form-label">Car Model:</label>
-            <input type="text" class="form-control" id="model" placeholder="please enter car model"/>
+            <input type="text" class="form-control" id="model" placeholder="please enter car model" />
         </div>
         <div class="form-group mb-3">
             <label for="type" class="form-label">Car Type(SUV/ CUV/ Sedan):</label>
-            <input type="text" class="form-control" id="type" placeholder="please enter car type"/>
+            <input type="text" class="form-control" id="type" placeholder="please enter car type" />
         </div>
         <button class="btn btn-primary">Create Car</button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
